# Orbit

./: .gitignore  README.md  detekt.yml  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/mehdiatique/orbit/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mehdiatique/orbit/: MainActivity.kt
app/src/main/java/com/mehdiatique/orbit/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/kotlin/com/mehdiatique/orbit/: MainActivity.kt  OrbitApplication.kt
app/src/main/kotlin/com/mehdiatique/orbit/navigation/: OrbiteNavGraph.kt
app/src/main/kotlin/com/mehdiatique/orbit/presentation/: OrbitApp.kt  OrbitBottomBar.kt
app/src/test/java/com/mehdiatique/orbit/: ExampleUnitTest.kt
core/data/: build.gradle.kts
core/database/: build.gradle.kts
core/database/schemas/com.mehdiatique.core.database.OrbitDatabase/: 1.json
core/navigation-contract/: build.gradle.kts
core/ui-contract/: build.gradle.kts
design-system/: build.gradle.kts
feature/action/: build.gradle.kts
feature/assistant/: build.gradle.kts
feature/contacts/: build.gradle.kts
feature/insight/: build.gradle.kts
feature/notes/: build.gradle.kts
feature/tasks/: build.gradle.kts
gradle/: libs.versions.toml
gradle-conventions/: build.gradle.kts
gradle-conventions/src/main/kotlin/: android-application-conventions.gradle.kts  android-compose-conventions.gradle.kts  android-hilt-conventions.gradle.kts  android-library-conventions.gradle.kts  detekt-linting-conventions.gradle.kts  google-firebase-analytics.gradle.kts  ksp-conventions.gradle.kts
gradle-conventions/src/main/kotlin/com/mehdiatique/orbit/conventions/: AndroidComposeConfiguration.kt  AndroidConfiguration.kt  AndroidTestConfiguration.kt  BuildTypesConfiguration.kt  FirebaseConfiguration.kt  KotlinConfiguration.kt  ProviderFactoryExtension.kt
gradle/wrapper/: gradle-wrapper.properties
llama-wrapper/: build.gradle.kts
llama-wrapper/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
llama-wrapper/src/main/cpp/common/: CMakeLists.txt
llama-wrapper/src/main/cpp/ggml/: CMakeLists.txt
llama-wrapper/src/main/cpp/ggml/ggml-cpu/: CMakeLists.txt
llama-wrapper/src/main/cpp/llama/: CMakeLists.txt
llama-wrapper/src/main/kotlin/com/mehdiatique/llamawrapper/: LlamaBridge.kt
(+139 files in other folders)
